# rough-t-rex-game

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: constant.h  ege.h  elephant.h  game.h  obstacle.h  randomizer.h  scene.h  score.h  shape.h  speed.h  sprite.h
lib/vs2019/: graphics1964.lib
src/: elephant.cpp  game.cpp  main.cpp  obstacle.cpp  randomizer.cpp  scene.cpp  score.cpp  shape.cpp  speed.cpp
